--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "use-debounce": "^9.0.2"
   },
   "devDependencies": {
     "postcss-preset-env": "^7.8.3",
