--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "moment": "^2.29.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "typescript": "4.9.3",
     "use-debounce": "^9.0.2"
   },
